--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -28,6 +28,15 @@
                 android:layout_row="0"
                 android:layout_column="0"
                 app:cardBackgroundColor="@color/cuadradoGrid">
+
+                <TextView
+                    android:id="@+id/a1Text"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:text=""
+                    tools:text="@string/one"
+                    android:textSize="60sp"
+                    android:gravity="center"/>
             </androidx.cardview.widget.CardView>
             <androidx.cardview.widget.CardView
                 android:id="@+id/a2"
@@ -37,6 +46,15 @@
                 android:layout_row="0"
                 android:layout_column="1"
                 app:cardBackgroundColor="@color/cuadradoGrid">
+
+                <TextView
+                    android:id="@+id/a2Text"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:text=""
+                    tools:text="@string/one"
+                    android:textSize="60sp"
+                    android:gravity="center"/>
             </androidx.cardview.widget.CardView>
             <androidx.cardview.widget.CardView
                 android:id="@+id/a3"
@@ -46,6 +64,15 @@
                 android:layout_row="0"
                 android:layout_column="2"
                 app:cardBackgroundColor="@color/cuadradoGrid">
+
+                <TextView
+                    android:id="@+id/a3Text"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:text=""
+                    tools:text="@string/one"
+                    android:textSize="60sp"
+                    android:gravity="center"/>
             </androidx.cardview.widget.CardView>
             <androidx.cardview.widget.CardView
                 android:id="@+id/a4"
@@ -55,6 +82,15 @@
                 android:layout_row="0"
                 android:layout_column="3"
                 app:cardBackgroundColor="@color/cuadradoGrid">
+
+                <TextView
+                    android:id="@+id/a4Text"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:text=""
+                    tools:text="@string/one"
+                    android:textSize="60sp"
+                    android:gravity="center"/>
             </androidx.cardview.widget.CardView>
 
             <androidx.cardview.widget.CardView
@@ -65,6 +101,15 @@
                 android:layout_row="1"
                 android:layout_column="0"
                 app:cardBackgroundColor="@color/cuadradoGrid">
+
+                <TextView
+                    android:id="@+id/b1Text"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:text=""
+                    tools:text="@string/one"
+                    android:textSize="60sp"
+                    android:gravity="center"/>
             </androidx.cardview.widget.CardView>
             <androidx.cardview.widget.CardView
                 android:id="@+id/b2"
@@ -74,6 +119,14 @@
                 android:layout_row="1"
                 android:layout_column="1"
                 app:cardBackgroundColor="@color/cuadradoGrid">
+                <TextView
+                    android:id="@+id/b2Text"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:text=""
+                    tools:text="@string/one"
+                    android:textSize="60sp"
+                    android:gravity="center"/>
             </androidx.cardview.widget.CardView>
             <androidx.cardview.widget.CardView
                 android:id="@+id/b3"
@@ -83,6 +136,14 @@
                 android:layout_row="1"
                 android:layout_column="2"
                 app:cardBackgroundColor="@color/cuadradoGrid">
+                <TextView
+                    android:id="@+id/b3Text"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:text=""
+                    tools:text="@string/one"
+                    android:textSize="60sp"
+                    android:gravity="center"/>
             </androidx.cardview.widget.CardView>
             <androidx.cardview.widget.CardView
                 android:id="@+id/b4"
@@ -92,6 +153,14 @@
                 android:layout_row="1"
                 android:layout_column="3"
                 app:cardBackgroundColor="@color/cuadradoGrid">
+                <TextView
+                    android:id="@+id/b4Text"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:text=""
+                    tools:text="@string/one"
+                    android:textSize="60sp"
+                    android:gravity="center"/>
             </androidx.cardview.widget.CardView>
 
             <androidx.cardview.widget.CardView
@@ -102,6 +171,14 @@
                 android:layout_row="2"
                 android:layout_column="0"
                 app:cardBackgroundColor="@color/cuadradoGrid">
+                <TextView
+                    android:id="@+id/c1Text"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:text=""
+                    tools:text="@string/one"
+                    android:textSize="60sp"
+                    android:gravity="center"/>
             </androidx.cardview.widget.CardView>
             <androidx.cardview.widget.CardView
                 android:id="@+id/c2"
@@ -111,6 +188,14 @@
                 android:layout_row="2"
                 android:layout_column="1"
                 app:cardBackgroundColor="@color/cuadradoGrid">
+                <TextView
+                    android:id="@+id/c2Text"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:text=""
+                    tools:text="@string/one"
+                    android:textSize="60sp"
+                    android:gravity="center"/>
             </androidx.cardview.widget.CardView>
             <androidx.cardview.widget.CardView
                 android:id="@+id/c3"
@@ -120,6 +205,14 @@
                 android:layout_row="2"
                 android:layout_column="2"
                 app:cardBackgroundColor="@color/cuadradoGrid">
+                <TextView
+                    android:id="@+id/c3Text"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:text=""
+                    tools:text="@string/one"
+                    android:textSize="60sp"
+                    android:gravity="center"/>
             </androidx.cardview.widget.CardView>
             <androidx.cardview.widget.CardView
                 android:id="@+id/c4"
@@ -129,6 +222,14 @@
                 android:layout_row="2"
                 android:layout_column="3"
                 app:cardBackgroundColor="@color/cuadradoGrid">
+                <TextView
+                    android:id="@+id/c4Text"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:text=""
+                    tools:text="@string/one"
+                    android:textSize="60sp"
+                    android:gravity="center"/>
             </androidx.cardview.widget.CardView>
 
             <androidx.cardview.widget.CardView
@@ -139,6 +240,14 @@
                 android:layout_row="3"
                 android:layout_column="0"
                 app:cardBackgroundColor="@color/cuadradoGrid">
+                <TextView
+                    android:id="@+id/d1Text"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:text=""
+                    tools:text="@string/one"
+                    android:textSize="60sp"
+                    android:gravity="center"/>
             </androidx.cardview.widget.CardView>
             <androidx.cardview.widget.CardView
                 android:id="@+id/d2"
@@ -148,6 +257,14 @@
                 android:layout_row="3"
                 android:layout_column="1"
                 app:cardBackgroundColor="@color/cuadradoGrid">
+                <TextView
+                    android:id="@+id/d2Text"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:text=""
+                    tools:text="@string/one"
+                    android:textSize="60sp"
+                    android:gravity="center"/>
             </androidx.cardview.widget.CardView>
             <androidx.cardview.widget.CardView
                 android:id="@+id/d3"
@@ -157,6 +274,14 @@
                 android:layout_row="3"
                 android:layout_column="2"
                 app:cardBackgroundColor="@color/cuadradoGrid">
+                <TextView
+                    android:id="@+id/d3Text"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:text=""
+                    tools:text="@string/one"
+                    android:textSize="60sp"
+                    android:gravity="center"/>
             </androidx.cardview.widget.CardView>
             <androidx.cardview.widget.CardView
                 android:id="@+id/d4"
@@ -166,11 +291,20 @@
                 android:layout_row="3"
                 android:layout_column="3"
                 app:cardBackgroundColor="@color/cuadradoGrid">
+                <TextView
+                    android:id="@+id/d4Text"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:text=""
+                    tools:text="@string/one"
+                    android:textSize="60sp"
+                    android:gravity="center"/>
             </androidx.cardview.widget.CardView>
 
         </GridLayout>
     </androidx.cardview.widget.CardView>
     <Button
+        android:id="@+id/btnSolve"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/btnSolve"
@@ -180,4 +314,25 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         android:layout_marginTop="30dp"/>
+
+    <EditText
+        android:id="@+id/editTxtNum"
+        android:layout_width="50sp"
+        android:layout_height="wrap_content"
+        app:layout_constraintTop_toBottomOf="@+id/btnSolve"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        android:layout_marginTop="20dp"/>
+    <Button
+        android:id="@+id/btnAdd"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/btnAdd"
+        android:backgroundTint="@color/colorGrid"
+        android:textColor="@color/white"
+        app:layout_constraintTop_toBottomOf="@+id/editTxtNum"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        android:layout_marginTop="30dp"/>
+
 </androidx.constraintlayout.widget.ConstraintLayout>
