--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -19,7 +19,7 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:rowCount="4"
-            android:columnCount="24">
+            android:columnCount="4">
             <androidx.cardview.widget.CardView
                 android:id="@+id/a1"
                 android:layout_width="80dp"
@@ -303,36 +303,121 @@
 
         </GridLayout>
     </androidx.cardview.widget.CardView>
+
     <Button
         android:id="@+id/btnSolve"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginTop="28dp"
+        android:backgroundTint="@color/colorGrid"
         android:text="@string/btnSolve"
-        android:backgroundTint="@color/colorGrid"
         android:textColor="@color/white"
-        app:layout_constraintTop_toBottomOf="@+id/crdGrid"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        android:layout_marginTop="30dp"/>
+        app:layout_constraintEnd_toEndOf="@id/crdGrid"
+        app:layout_constraintTop_toBottomOf="@+id/crdGrid" />
 
-    <EditText
-        android:id="@+id/etNum"
-        android:layout_width="50sp"
-        android:layout_height="wrap_content"
-        app:layout_constraintTop_toBottomOf="@+id/btnSolve"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        android:layout_marginTop="20dp"/>
+    <GridLayout
+        android:id="@+id/gridNums"
+        android:layout_width="218.75dp"
+        android:layout_height="218.75dp"
+        app:layout_constraintTop_toBottomOf="@+id/crdGrid"
+        app:layout_constraintStart_toStartOf="@+id/crdGrid"
+        android:layout_marginTop="20dp"
+        android:rowCount="3"
+        android:columnCount="3">
+
+        <Button
+            android:id="@+id/btnNum1"
+            android:layout_width="72.91dp"
+            android:layout_height="72.91dp"
+            android:text="@string/one"
+            android:textColor="@color/white"
+            android:backgroundTint="@color/colorSelected"
+            android:layout_row="0"
+            android:layout_column="0"/>
+        <Button
+            android:id="@+id/btnNum2"
+            android:layout_width="72.91dp"
+            android:layout_height="72.91dp"
+            android:text="@string/two"
+            android:textColor="@color/white"
+            android:backgroundTint="@color/colorSelected"
+            android:layout_row="0"
+            android:layout_column="1"/>
+        <Button
+            android:id="@+id/btnNum3"
+            android:layout_width="72.91dp"
+            android:layout_height="72.91dp"
+            android:text="@string/three"
+            android:textColor="@color/white"
+            android:backgroundTint="@color/colorSelected"
+            android:layout_row="0"
+            android:layout_column="2"/>
+        <Button
+            android:id="@+id/btnNum4"
+            android:layout_width="72.91dp"
+            android:layout_height="72.91dp"
+            android:text="@string/four"
+            android:textColor="@color/white"
+            android:backgroundTint="@color/colorSelected"
+            android:layout_row="1"
+            android:layout_column="0"/>
+        <Button
+            android:id="@+id/btnNum5"
+            android:layout_width="72.91dp"
+            android:layout_height="72.91dp"
+            android:text="@string/five"
+            android:textColor="@color/white"
+            android:backgroundTint="@color/colorSelected"
+            android:layout_row="1"
+            android:layout_column="01"/>
+        <Button
+            android:id="@+id/btnNum6"
+            android:layout_width="72.91dp"
+            android:layout_height="72.91dp"
+            android:text="@string/six"
+            android:textColor="@color/white"
+            android:backgroundTint="@color/colorSelected"
+            android:layout_row="1"
+            android:layout_column="2"/>
+        <Button
+            android:id="@+id/btnNum7"
+            android:layout_width="72.91dp"
+            android:layout_height="72.91dp"
+            android:text="@string/seven"
+            android:textColor="@color/white"
+            android:backgroundTint="@color/colorSelected"
+            android:layout_row="2"
+            android:layout_column="0"/>
+        <Button
+            android:id="@+id/btnNum8"
+            android:layout_width="72.91dp"
+            android:layout_height="72.91dp"
+            android:text="@string/eight"
+            android:textColor="@color/white"
+            android:backgroundTint="@color/colorSelected"
+            android:layout_row="2"
+            android:layout_column="1"/>
+        <Button
+            android:id="@+id/btnNum9"
+            android:layout_width="72.91dp"
+            android:layout_height="72.91dp"
+            android:text="@string/nine"
+            android:textColor="@color/white"
+            android:backgroundTint="@color/colorSelected"
+            android:layout_row="2"
+            android:layout_column="2"/>
+
+
+    </GridLayout>
     <Button
-        android:id="@+id/btnAdd"
+        android:id="@+id/btnzero"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/btnAdd"
-        android:backgroundTint="@color/colorGrid"
+        android:layout_height="72.91dp"
+        app:layout_constraintBottom_toBottomOf="@id/gridNums"
+        app:layout_constraintEnd_toEndOf="@id/crdGrid"
+        app:layout_constraintStart_toEndOf="@id/gridNums"
+        android:text="@string/zero"
         android:textColor="@color/white"
-        app:layout_constraintTop_toBottomOf="@+id/etNum"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        android:layout_marginTop="30dp"/>
+        android:backgroundTint="@color/colorSelected"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
